<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uncc.prateek.favouritemovies.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/space_50dp"
            android:minHeight="100dp"/>

        <Button
            android:text="@string/button_addMovie"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_addMovie"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <Button
            android:text="@string/button_editMovie"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_editMovie"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <Button
            android:text="@string/button_deleteMovie"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_deleteMovie"
            android:layout_gravity="center_vertical|center_horizontal"/>
        <Button
            android:text="@string/button_showListByYear"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_showListByYear"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <Button
            android:text="@string/button_showListByRating"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_showListByYear"
            android:layout_gravity="center_vertical|center_horizontal"/>


    </LinearLayout>
</RelativeLayout>
