<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_edit_movie"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
tools:context="com.uncc.prateek.favouritemovies.EditMovieActivity">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:id="@+id/linearLayout_addMovie_nameEdit"
    android:layout_weight="0.00">

    <TextView
        android:text="@string/textView_movieName"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/textView_movieNameLabelEdit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_movieNameValueEdit"
        android:maxLength="50"/>

</LinearLayout>

<TextView
    android:text="@string/textView_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textView_descriptionLabelEdit"
    android:textAppearance="@style/TextAppearance.AppCompat" />
    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">
    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:maxLines="5"
        android:lines="5"
        android:scrollbars="vertical"
        android:requiresFadingEdge="vertical"
        android:id="@+id/textView_description_valueEdit"
        android:background="@drawable/border"
        android:layout_height="148dp" />
    </ScrollView>


    <Space
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/space_50dp"
    android:minHeight="20dp"/>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <TextView
        android:text="@string/textView_genre"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView_genreLabelEdit"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinner_genreEdit"
        android:entries="@array/spinner_genreValues"
        android:layout_width="267dp" />

</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/textView_ratingLabelq"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_ratingLabelEdit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="0.58" />

        <SeekBar
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar_ratingEdit"
            android:max="5"

            android:progress="@android:integer/config_longAnimTime" />

        <TextView
            android:layout_width="41dp"
            android:layout_height="35dp"
            android:id="@+id/textView_ratingValueEdit" />

    </LinearLayout>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="357dp"
    android:layout_height="43dp"
    android:weightSum="1"
    android:layout_weight="0.00">

    <TextView
        android:text="@string/textView_yearLabel"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView_yearLabelEdit"
        android:layout_weight="0.30"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_yearValueEdit"
        android:layout_weight="0.52" android:maxLength="4"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_yearValueEdit" />

</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/textView_IMDBLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_IMDBLabelEdit"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_imdbLinkEdit"
        android:layout_weight="1" />
</LinearLayout>

<Button
    android:text="@string/button_saveChanges"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button_saveChanges" />

</LinearLayout>
